opa/gatekeeper/constraints/image-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageCheck
metadata:
  name: denyimagerepo
spec:
  match:
    excludedNamespaces:
      - gatekeeper-system
      - kube-system
      - kyverno
      - kube-public
      - local-path-storage
    kinds:
      - apiGroups: ["apps"]
        kinds: 
          - Deployment
      - apiGroups: []
        kinds: 
          - Pod
  parameters:
    imageRepo: 
      - "docker.io"
      - "quay.io"
      - "ghcr.io"
