opa/gatekeeper/constraints/image-tag-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageTags
metadata:
  name: denyimagetaglatest
spec:
  match:
    scope: Namespaced
    excludedNamespaces:
      - kube-local
      - kube-system
      - kyverno
      - gatekeeper-system
    
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: [""]
        kinds: ["Pod"]
