opa/gatekeeper/constraints/security-context-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodSecurityContext
metadata:
  name: denymissingsecuritycontext
spec:
  match:
    scope: Namespaced
    excludedNamespaces:
      - kube-local
      - kube-system
      - kyverno
      - gatekeeper-system
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: [""]
        kinds: ["Pod"]
